--- a/12 - Key Sequence Detection/index.html
+++ b/12 - Key Sequence Detection/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
   <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
 </head>
+
 <body>
-<script>
-</script>
+  <script>
+
+    let buffer = [];
+    let lastKeyTime = Date.now();
+    const keySequence = 'abcdef';
+
+    window.addEventListener('keyup', (e) => {
+      const key = e.key.toLowerCase();
+
+      const currentKeyTime = Date.now();
+
+      if (currentKeyTime - lastKeyTime > 1000) {
+        buffer = [];
+      }
+
+      buffer.push(key);
+      lastKeyTime = currentKeyTime;
+
+      if (buffer.join('') === keySequence) {
+        document.body.style.background = 'red';
+      }
+    })
+  </script>
 </body>
+
 </html>
