Day#12: modified if statement with function cornify_add after watching wesbos's video

--- a/12 - Key Sequence Detection/index.html
+++ b/12 - Key Sequence Detection/index.html
@@ -27,7 +27,7 @@
       lastKeyTime = currentKeyTime;
 
       if (buffer.join('') === keySequence) {
-        document.body.style.background = 'red';
+        cornify_add();
       }
     })
   </script>
